fix visible selectfield under header

--- a/RAPP/static/css/style.css
+++ b/RAPP/static/css/style.css
@@ -26,7 +26,7 @@ header{
     background-color: var(--hhu-color);
     position: fixed;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
 }
 
 hr{
